fix content shifting, update speed of the index hero animation

--- a/css/index/hero.css
+++ b/css/index/hero.css
@@ -49,6 +49,12 @@
         min-height: 68vh;
     }
 
+    .hero__wrapper {
+        margin-top: -100%;
+        opacity: 0;
+        animation: slideDown 0.8s ease-in-out forwards;
+    }
+
     .hero__title {
         font-size: 48px;
     }
@@ -59,6 +65,12 @@
         min-height: 100vh;
     }
 
+    .hero__wrapper {
+        margin-top: -100%;
+        opacity: 0;
+        animation: slideDown 1s ease-in-out forwards;
+    }
+    
     .hero__title {
         font-size: 56px;
     }
@@ -72,6 +84,12 @@
 }
 
 @media (min-width: 992px) {
+    .hero__wrapper {
+        margin-top: -100%;
+        opacity: 0;
+        animation: slideDown 1.5s ease-in-out forwards;
+    }
+
     .hero__title {
         font-size: 64px;
     }
