--- a/css/production/card.css
+++ b/css/production/card.css
@@ -1,3 +1,4 @@
+
 .production__card-list{
     background-color: #ffffff;
     padding: 90px 0 0 0;
@@ -15,14 +16,28 @@
     padding: 30px 0 30px 20px;
 }
 
+.skeleton {
+    min-height: 1000px;
+}
+
 .production__card {
     flex: 0 0 calc(50% - 20px);
     min-width: calc(50% - 20px);
     background-size: cover;
-    min-height: 150px;
+    min-height: 170px;
     border-radius: 10px;
     overflow: hidden;
     transition: transform 0.3s ease-in-out;
+}
+
+
+.production__image-wrap {
+    aspect-ratio: 1.5 / 1;
+}
+
+.production__card-image {
+    width: 100%;
+    height: 100%;
 }
 
 .production__card:hover {
